# avti

./: .gitignore  LICENSE  README.md  example.env  pyproject.toml
vti/: surrogates.py
vti/dgp/: __init__.py  abstract.py  dgp_factory.py  diagnorm_generator.py  lineardag.py  nonlineardag_mlp.py  nonlineardag_mlpnobias.py  param_transform_factory.py  robust_vs.py
vti/distributions/: __init__.py  penalised_dag.py  uniform_bs.py  uniform_dag.py
vti/examples/: __init__.py  dag_sweeping_trial.py  rvs_sweeping_trial.py  sfe_trial.py  surrogate_trials.py
vti/examples/slurm/: robust_vs_figure2_plots.py  (+3 more)
vti/factories/: __init__.py
vti/flows/: transdimensional.py
vti/infer/: __init__.py  base.py  sfe.py  surrogate.py
vti/model_samplers/: __init__.py  abstract.py  abstractsfe.py  gumbelrao.py  sfecategorical.py  sfedag.py  sfemade.py  softmax_surrogate.py
vti/optim/: policyannealing.py  rm_lr.py
vti/tests/: test_metrics.py  test_strict_left_permutation.py  testlineardagrjmcmc.py  testmadeplus.py  testperm.py  testperm2.py  testsfedag.py  testsfemade.py
vti/transforms/: cosmic_autoregressive.py  cosmic_diag_affine.py  cosmic_sas_pd.py  cosmic_shared_diag_affine.py  madede.py  madeplus.py  partial_reverse_permutation.py  pdlinear.py  rational_quadratic_clamp.py  sas.py  strict_left_permutation.py
vti/utils/: __init__.py  _early_stopping.py  callbacks.py  cdt_helpers.py  dag_helpers.py  debug.py  diff_tvr.py  experiment.py  gstempschedule.py  jit.py  kld.py  leakyhardtanh.py  linalg_lowrank.py  logging.py  math_helpers.py  plots.py  seed.py  torch_nn_helpers.py
(+6 files in other folders)
